wcfsetup/install/files/style/ui/dropdownInteractive.scss
.dropdownMenuContainer > .interactiveDropdown.open {
	visibility: visible;
}

/* styling for interactive dropdowns (currently only used in the user panel) */
.interactiveDropdown {
	background-color: $wcfContentBackground;
	border: 1px solid $wcfDropdownBorder;
	box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, .2);
	color: $wcfContentText;
	display: block;
	pointer-events: all;
	position: absolute;
	visibility: hidden;
	z-index: 450;
	
	> .elementPointer {
		border-color: $wcfDropdownBorder transparent;
		border-style: solid;
		border-width: 0 10px 10px;
		content: "";
		display: block;
		position: absolute;
		z-index: 100;
		
		> span {
			border-color: $wcfSidebarBackground transparent;
			border-style: solid;
			border-width: 0 10px 10px;
			content: "";
			display: block;
			position: absolute;
			top: 1px;
			z-index: 101;
		}
		
		&.left {
			left: 5px;
			
			> span {
				left: -10px;
			}
		}
		
		&.right {
			right: 5px;
			
			> span {
				right: -10px;
			}
		}
	}
	
	&.interactiveDropdownUserMenu > .interactiveDropdownItemsContainer {
		overflow: visible;
		max-height: none;
	}
}

/* drop down header */
.interactiveDropdownHeader {
	align-items: center;
	background-color: $wcfSidebarBackground;
	color: $wcfSidebarHeadlineText;
	display: flex;
	padding: 10px 20px;
	
	a {
		color: $wcfSidebarHeadlineLink;
		
		&:hover {
			color: $wcfSidebarHeadlineLinkActive;
			
			text-decoration: underline;
		}
	}
	
	.interactiveDropdownTitle {
		flex: 1 1 auto;
		
		@extend .wcfFontHeadline;
	}
	
	.interactiveDropdownLinks {
		flex: 0 0 auto;
		margin-left: 5px;
	}
}

/* container for dropdown items */
.interactiveDropdownItemsContainer {
	border: 1px solid $wcfContentBorderInner;
	border-width: 1px 0;
	max-height: 300px;
	
	&.ps-container {
		> .interactiveDropdownItems {
			position: relative;
			z-index: 100;
		}
		
		> .ps-scrollbar-y-rail {
			z-index: 200;
		}
	}
}

/* dropdown item list */
.interactiveDropdownItems {
	> li {
		padding: 15px 20px;
		position: relative;
		
		&:not(:last-child) {
			border-bottom: 1px solid $wcfContentBorderInner;
		}
		
		&:hover {
			background-color: $wcfTabularBoxBackgroundActive;
		}
		
		a {
			color: $wcfContentLink;
			
			&:hover {
				color: $wcfContentLinkActive;
			}
		}
		
		.box48 {
			align-items: center;
			overflow: hidden;
		}
	}
	
	.loading,
	.noItems {
		padding: 20px 10px;
		text-align: center;
		
		@extend .wcfFontHeadline;
	}
}

/* outstanding / unread item */
.interactiveDropdownItemOutstanding {
	display: flex;
	
	> .box48 {
		flex: 1 1 auto;
	}
	
	h3 {
		font-weight: bold;
	}
}

/* mark as read button for an item */
.interactiveDropdownItemMarkAsRead {
	align-self: center;
	flex: 0 0 auto;
	margin-left: 5px;
}

/* Adds a link spanning the entire item while being placed behind all other links appearing
   within the regular text using a lower z-index. Allows for regular links to be accessible,
   but causes the item to act as a link. */
.interactiveDropdownItemShadow {
	> .box48 {
		position: relative;
	}
	
	> .box48,
	> .interactiveDropdownItemMarkAsRead {
		pointer-events: none;
		z-index: 20;
		
		a {
			pointer-events: all;
		}
	}
	
	> .interactiveDropdownItemShadowLink {
		bottom: 0;
		left: 0;
		position: absolute;
		right: 0;
		top: 0;
		z-index: 10;
	}
}

/* show all button shown in dropdown menu bottom */
.interactiveDropdownShowAll {
	background-color: $wcfSidebarBackground;
	color: $wcfSidebarHeadlineText;
	display: block;
	padding: 10px 20px;
	text-align: center;
	
	&:hover {
		color: $wcfSidebarHeadlineText;
		text-decoration: underline;
	}
}

@media only screen and (min-width: 801px) {
	.interactiveDropdown {
		min-width: 350px;
	}
	
	.interactiveDropdownItemsContainer {
		overflow: hidden;
		position: relative;
	}
	
	.interactiveDropdownItems:not(.interactiveDropdownItemsUserMenu) > li {
		max-width: 400px;
	}
}

/* todo: mobile version
@media only screen and (max-width: 800px) {
	.DEBUG_ONLY_interactiveDropdown {
		border-width: 1px 0;
		box-sizing: border-box;
		left: 0 !important;
		right: 0 !important;
		width: 100%;
		
		> .interactiveDropdownItemsContainer {
			overflow-x: auto;
			
			> .interactiveDropdownItems > li.interactiveDropdownItemOutstandingIcon > div.interactiveDropdownItemMarkAsRead {
				bottom: 0;
				position: absolute;
				right: 0;
				top: 0;
				//width: (@wcfGapSmall + @wcfGapTiny) + 16px + (@wcfGapSmall + @wcfGapTiny);
				
				> a {
					display: block;
					height: 100%;
					text-align: center;
					
					> .icon {
						position: relative;
						top: 50%;
						
						transform: translateY(-50%);
						-ms-transform: translateY(-50%);
						-webkit-transform: translateY(-50%);
					}
				}
			}
		}
	}
}
*/

